Day5 commit1 content넣을 부분 크기 설정완료 제목과 내용 font-size 설정 완료 contact 링크 걸기, 이미지 삽입 완료

--- a/project_myPortfolio/myPortfolio.html
+++ b/project_myPortfolio/myPortfolio.html
@@ -43,22 +43,40 @@
 
 			<!--About-->
 			<section id="about">
-				<span>About Me</span>
+				<div id="content_about">
+					<h3>About Me</h3><br>
+					<div class="content">안녕하세요</div>
+					<img src="">
+				</div>
 			</section>
 
 			<!--skills-->
 			<section id="skills">
-				<span>Skills</span>
+				<div id="content_skills">
+					<h3>Skills</h3><br>
+					<div class="content">안녕하세요</div>
+				</div>
 			</section>
 
 			<!--activity-->
 			<section id="activity">
-				<span>Activity</span>
+				<div id="content_skills">
+					<h3>Activity</h3><br>
+					<div class="content">안녕하세요</div>
+				</div>
 			</section>
 
 			<!--contactk-->
 			<section id="contact">
-				<span>Contact</span>
+				<div id="content_skills">
+					<h3>Contact</h3><br>
+						<div class="content">
+						<a href="#"><img src="images/mail.png"/><label>prettyjys@gmail.com</label></a><br>
+						<a href="#"><img src="images/instagram.png"><label>instagram</label></a><br>
+						<a href="#"><img src="images/github.png"/><label>github</label></a><br>
+						<a href="#"><img src="images/tistory.png"/><label>tistory</label></a><br>
+					</div>
+				</div>
 			</section>
 
 			
