--- a/project_myPortfolio/myPortfolio.html
+++ b/project_myPortfolio/myPortfolio.html
@@ -3,8 +3,9 @@
 		<meta charset="UTF-8">
 		<title>seoni's Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="styles/myPortfolio.css">
+
 		<!--title옆에 logo이미지를 삽입-->
-		<link rel="icon" href="images/forest.gif"/>
+		<link rel="icon" href="images/developer.png"/>
 		<!--제이쿼리 삽입 링크는 내 js파일보다 위에 있어야 함-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!--js파일import-->
@@ -45,8 +46,19 @@
 			<section id="about">
 				<div id="content_about">
 					<h3>About Me</h3><br>
-					<div class="content">안녕하세요</div>
-					<img src="">
+					<div class="content" align="center">
+						<div id="image">
+							<img src="images/me2.jpg">
+						</div>
+						<h4 align="center">"프론트엔드 기획개발자"</h4><br>
+						<p align="center">Hi, I'm Yeongseon Jang.
+							Nice to meet you.
+							I'm interested in IT service a lot.
+							So, I'm majoring in computer science as a second major.
+							Especially, I like designing Websites and that's why i wanna be the front-end project manager and developer.
+							I've tried project manager in developing game club and now i'm trying to developing website what i planned in my head.
+						<p>
+					</div>
 				</div>
 			</section>
 
@@ -66,15 +78,25 @@
 				</div>
 			</section>
 
-			<!--contactk-->
+			<!--contact-->
 			<section id="contact">
-				<div id="content_skills">
+				<div id="content_contact">
 					<h3>Contact</h3><br>
-						<div class="content">
-						<a href="#"><img src="images/mail.png"/><label>prettyjys@gmail.com</label></a><br>
-						<a href="#"><img src="images/instagram.png"><label>instagram</label></a><br>
-						<a href="#"><img src="images/github.png"/><label>github</label></a><br>
-						<a href="#"><img src="images/tistory.png"/><label>tistory</label></a><br>
+					<div class="content">
+						<p>If you have any question please contact to me!</p><br>
+						<div>
+							<img src="images/mail.png" id="mail" onclick="copy()"/><label id="mail" onclick="copy()">e-mail</label>
+						</div>
+						<div>
+							<a href="https://www.instagram.com/seoni00_off/" target="_blank"><img src="images/instagram.png" id="instagram" ><label id="instagram">instagram</label></a>
+						</div>
+						<!--<br>-->
+						<div>
+							<a href="https://github.com/seoni00" target="_blank"><img src="images/github.png" id="github"/><label id="github">github</label></a>
+						</div>
+						<div>
+							<a href="https://seoni00.tistory.com/" target="_blank"><img src="images/tistory.png" id="tistory"/><label id="tistory">tistory</label></a>
+						</div>
 					</div>
 				</div>
 			</section>
