Day6 commit1 Skills 구현중

--- a/project_myPortfolio/myPortfolio.html
+++ b/project_myPortfolio/myPortfolio.html
@@ -45,18 +45,17 @@
 			<!--About-->
 			<section id="about">
 				<div id="content_about">
-					<h3>About Me</h3><br>
+					<h3>About Me</h3><br><br>
 					<div class="content" align="center">
 						<div id="image">
 							<img src="images/me2.jpg">
 						</div>
-						<h4 align="center">"프론트엔드 기획개발자"</h4><br>
+						<h4 align="center">"성장하는 프론트엔드 기획개발자"</h4><br>
 						<p align="center">Hi, I'm Yeongseon Jang.
-							Nice to meet you.
 							I'm interested in IT service a lot.
 							So, I'm majoring in computer science as a second major.
 							Especially, I like designing Websites and that's why i wanna be the front-end project manager and developer.
-							I've tried project manager in developing game club and now i'm trying to developing website what i planned in my head.
+							I've tried project manager in developing game club and now i'm trying to developing website what i've planned in my head.
 						<p>
 					</div>
 				</div>
@@ -65,15 +64,29 @@
 			<!--skills-->
 			<section id="skills">
 				<div id="content_skills">
-					<h3>Skills</h3><br>
-					<div class="content">안녕하세요</div>
+					<h3>Skills</h3><br><br>
+					<div class="content" align="center">
+						<h4>Programming</h4><br>
+						<img src="images/C.png">
+						<img src="images/java.png"><br>
+						<img src="images/html.png">
+						<img src="images/css.png">
+						<img src="images/js.png">
+						<br><br>
+
+						<h4>Language</h4><br>
+						<img src="images/english.png">
+						<img src="images/japanese.png">
+						<br><br>
+
+					</div>
 				</div>
 			</section>
 
 			<!--activity-->
 			<section id="activity">
-				<div id="content_skills">
-					<h3>Activity</h3><br>
+				<div id="content_activity">
+					<h3>Activity</h3><br><br>
 					<div class="content">안녕하세요</div>
 				</div>
 			</section>
@@ -81,7 +94,7 @@
 			<!--contact-->
 			<section id="contact">
 				<div id="content_contact">
-					<h3>Contact</h3><br>
+					<h3>Contact</h3><br><br>
 					<div class="content">
 						<p>If you have any question please contact to me!</p><br>
 						<div>
